--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/REDAppTheme">
-        <activity android:name=".LoginActivity">
+
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".SocialFeeder"
             android:label="@string/title_activity_social_feeder"
@@ -30,8 +32,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="eventswithred.com.redrewards.LoginActivity" />
         </activity>
+
         <activity android:name=".StoreActivity" />
-        <activity android:name=".MainActivity"></activity>
+
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
