StoreList creation- finshed for now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,15 +47,21 @@
             android:name=".SocialFeeder"
             android:label="@string/title_activity_social_feeder"
             android:theme="@style/REDAppTheme" />
-        <fragment android:name=".StoreActivity" />
 
         <activity
             android:name=".LoginActivity"
             android:parentActivityName=".MainActivity" />
+
         <activity
             android:name=".Settings"
             android:parentActivityName=".MainActivity" />
+
         <activity android:name=".noDisplayLoginLauncher" />
+
+        <activity
+            android:name=".singleItemActivity"
+            android:parentActivityName=".MainActivity"/>
+
         <activity
             android:name=".LogoutActivity"
             android:parentActivityName=".MainActivity" ></activity>
