--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name="eventswithred.com.redrewards.AppController"
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -50,21 +50,36 @@
 
         <activity
             android:name=".LoginActivity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
 
         <activity
             android:name=".Settings"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity" >
+        </activity>
 
-        <activity android:name=".noDisplayLoginLauncher" />
+        <activity android:name=".noDisplayLoginLauncher" >
+        </activity>
 
         <activity
             android:name=".singleItemActivity"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
 
         <activity
             android:name=".LogoutActivity"
-            android:parentActivityName=".MainActivity" ></activity>
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
