--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -38,6 +38,8 @@ dependencies {
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'org.twitter4j:twitter4j-core:4.0.6'
 }
 
 apply plugin: 'com.google.gms.google-services'
